--- a/project/src/main/webapp/WEB-INF/config.properties
+++ b/project/src/main/webapp/WEB-INF/config.properties
@@ -7,5 +7,6 @@ logout=services.LogoutAction
 logout.Success=login.jsp
 logout.Fail=err.jsp
 action=services.Action
-Completed=Invoice.jsp
 purchase=services.PurchaseAction
+shop1=shop1.jsp
+shop1=Invoice.jsp
