--- a/project/src/main/webapp/WEB-INF/config.properties
+++ b/project/src/main/webapp/WEB-INF/config.properties
@@ -8,5 +8,5 @@ logout.Success=login.jsp
 logout.Fail=err.jsp
 action=services.Action
 purchase=services.PurchaseAction
-shop1=shop1.jsp
-shop1=Invoice.jsp
+shop2=vegetable.jsp
+shop3=Invoice.jsp
